# pulmodex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  claude-code-review.yml  frontend.yml
configs/: __init__.py  config.yaml
configs/detection/: evaluate.yaml  infer.yaml  train.yaml
configs/experiment/: __init__.py  baseline.yaml  fp_reduction.yaml  hybrid.yaml  webapp.yaml
docker/: api.Dockerfile  requirements-api.txt  worker.Dockerfile
scripts/: __init__.py  dicom_to_luna16.py  export_onnx.py  generate_mock_luna16.py  install_systemd_service.sh  preprocess_luna16_cache.py  visualize_nodule_bbox.py
src/: cli.py  detect_evaluate.py  detect_infer.py  detect_prepare.py  detect_standardize.py  detect_train.py  evaluate.py  inference.py  train.py
src/data/: __init__.py  preprocessing.py
src/detection/: __init__.py  config.py  data.py  evaluate.py  infer.py  io.py  model.py  train.py
src/evaluation/: __init__.py  froc.py  metrics.py
src/fp_reduction/: __init__.py  classifier.py
src/inference/: __init__.py  monai_bundle.py  monai_tutorial.py  pipeline.py
src/interpretability/: __init__.py  gradcam.py  swin_attention.py
src/models/: loading.py
src/training/: trainer.py
src/webapp/: api.py  renderer.py  tasks.py
tests/: test_cli.py
tests/detection/: test_detection_io.py
webapp/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
webapp/src/: App.jsx  (+1 more)
(+28 files in other folders)
